@@ -48,6 +48,7 @@ class FilterListStore(ListStoreBase):
         for i, entry in enumerate(self):
             epoch = entry[FilterColumn.EXPIRE_EPOCH]
             if epoch > 0 and epoch - now < 0:
+                # print "Expire: ", entry[FilterColumn.WORD]
                 self.remove(self.get_iter(i))
 
         reactor.callLater(300, self.expire)
