@@ -1,3 +1,7 @@
+2012-02-29  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* menu.py: Added a menu item for adding filters.
+
 2012-02-27  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* filters.py: Added a global filter.
